# ClaudePad

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  config.yaml  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  server.js  server.ts  ssh-manager.js  tailwind.config.js  terminal_process.py  test_cache.js  tsconfig.json
.cache/: sessions.json
.claude/memory/: release-checklist.md
.claude/projects/-home-yangjing-ClaudePad/memory/: git-workflow.md
.github/workflows/: release.yml
asserts/data/: tips.json
backend/: index.ts
backend/routes/: cache.ts  config.ts  servers.ts  sessions.ts  system.ts  terminals.ts
backend/services/: config.ts  session-cache.ts  ssh-manager.ts  terminal-pool.ts
backend/types/: index.ts
backend/utils/: response.ts
backend/websocket/: ssh.ts  terminal.ts
docs/: PLAYGOUND.md  PRD.md  SSH-REMOTE-SERVER-DESIGN.md  TODO.md  UI.md  VISUAL.md  sessions-mgmt-arch.md
docs/arc/: session-optimization-plan.md
docs/cc-tips/: README.md  advanced-tips.md  best-practices.md  cc-tips-design.md  cli-guide.md  collect_tips.py  core-workflows.md  mcp-skills.md  troubleshooting.md
docs/log/: 2026-02-26-sheikah-rewrite.md
docs/plans/: 2026-02-19-frontend-architecture-design.md  2026-02-19-frontend-implementation.md  2026-02-20-terminal-architecture-design.md  2026-02-20-terminal-implementation.md
frontend/: idea.html  index.html  playground.html  terminal.html  tips.html
scripts/: package-linux.mjs  package-win.mjs
tests/: test-playwright.mjs  test_cache.mjs  test_terminal_process.py
