[project]
name = "claudpad"
version = "0.1.0"
description = "Web-based task management interface for Claude Code"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "aiofiles>=23.2.1",
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
]

[dependency-groups]
dev = []
